// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingNamespace Hosted version Renders the component 1`] = `
<fragment-stub>
  <v-container-stub tag="div">
    <v-row-stub tag="div" align="center" justify="center" class="mt-4">
      <v-col-stub sm="8" tag="div">
        <div data-test="tenant-div" class="mt-6">
          <v-row-stub tag="div" class="mb-2">
            <v-col-stub md="auto" tag="div">
              <v-card-stub loaderheight="4" tag="div" elevation="0" tile="true">
                Tenant ID:
              </v-card-stub>
            </v-col-stub>
            <v-col-stub md="auto" tag="div" class="ml-auto">
              <v-card-stub loaderheight="4" tag="div" elevation="0" tile="true" class="auto">
                <v-chip-stub activeclass="" tag="span" active="true" closeicon="$delete" closelabel="$vuetify.close" filtericon="$complete"><span>
                    xxxxxxxx
                  </span>
                  <v-icon-stub right="" data-clipboard-click-handler="$17" data-clipboard-success-handler="$18">
                    mdi-content-copy
                  </v-icon-stub>
                </v-chip-stub>
              </v-card-stub>
            </v-col-stub>
          </v-row-stub>
          <v-divider-stub></v-divider-stub>
          <v-divider-stub></v-divider-stub>
        </div>
        <div data-test="editOperation-div" class="mt-6">
          <namespacerename-stub data-test="namespaceRename-component"></namespacerename-stub>
          <v-divider-stub></v-divider-stub>
          <v-divider-stub></v-divider-stub>
        </div>
        <div data-test="userOperation-div" class="mt-6">
          <v-row-stub tag="div">
            <v-col-stub tag="div">
              <h3>
                Members
              </h3>
            </v-col-stub>
            <v-spacer-stub tag="div"></v-spacer-stub>
            <div>
              <v-col-stub md="auto" tag="div" class="ml-auto">
                <namespacememberformdialogadd-stub data-test="namespaceMemberFormDialogAdd-component"></namespacememberformdialogadd-stub>
              </v-col-stub>
            </div>
          </v-row-stub>
          <namespacememberlist-stub namespace="[object Object]"></namespacememberlist-stub>
          <v-divider-stub></v-divider-stub>
          <v-divider-stub></v-divider-stub>
        </div>
        <div data-test="securityOperation-div" class="mt-6">
          <settingsecurity-stub hastenant="true"></settingsecurity-stub>
          <v-divider-stub></v-divider-stub>
          <v-divider-stub></v-divider-stub>
        </div>
        <div data-test="deleteOperation-div" class="mt-6">
          <h3 class="mb-5">
            Danger Zone
          </h3>
          <v-row-stub tag="div" class="mt-4 mb-2">
            <v-col-stub tag="div" class="ml-3">
              <h4>
                Delete this namespace
              </h4>
              <div class="ml-2">
                <p>
                  After deleting a namespace, there is no going back. Be sure.
                </p>
              </div>
            </v-col-stub>
            <v-col-stub md="auto" tag="div" class="ml-auto mb-4">
              <namespacedelete-stub nstenant="xxxxxxxx" data-test="namespaceDelete-component"></namespacedelete-stub>
            </v-col-stub>
          </v-row-stub>
        </div>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</fragment-stub>
`;

exports[`SettingNamespace Open version Renders the component 1`] = `
<fragment-stub>
  <v-container-stub tag="div">
    <v-row-stub tag="div" align="center" justify="center" class="mt-4">
      <v-col-stub sm="8" tag="div">
        <div data-test="tenant-div" class="mt-6">
          <v-row-stub tag="div" class="mb-2">
            <v-col-stub md="auto" tag="div">
              <v-card-stub loaderheight="4" tag="div" elevation="0" tile="true">
                Tenant ID:
              </v-card-stub>
            </v-col-stub>
            <v-col-stub md="auto" tag="div" class="ml-auto">
              <v-card-stub loaderheight="4" tag="div" elevation="0" tile="true" class="auto">
                <v-chip-stub activeclass="" tag="span" active="true" closeicon="$delete" closelabel="$vuetify.close" filtericon="$complete"><span>
                    xxxxxxxx
                  </span>
                  <v-icon-stub right="" data-clipboard-click-handler="$3" data-clipboard-success-handler="$4">
                    mdi-content-copy
                  </v-icon-stub>
                </v-chip-stub>
              </v-card-stub>
            </v-col-stub>
          </v-row-stub>
          <v-divider-stub></v-divider-stub>
          <v-divider-stub></v-divider-stub>
        </div>
        <div data-test="editOperation-div" class="mt-6">
          <namespacerename-stub data-test="namespaceRename-component"></namespacerename-stub>
          <v-divider-stub></v-divider-stub>
          <v-divider-stub></v-divider-stub>
        </div>
        <div data-test="userOperation-div" class="mt-6">
          <v-row-stub tag="div">
            <v-col-stub tag="div">
              <h3>
                Members
              </h3>
            </v-col-stub>
            <v-spacer-stub tag="div"></v-spacer-stub>
            <div>
              <v-col-stub md="auto" tag="div" class="ml-auto">
                <namespacememberformdialogadd-stub data-test="namespaceMemberFormDialogAdd-component"></namespacememberformdialogadd-stub>
              </v-col-stub>
            </div>
          </v-row-stub>
          <namespacememberlist-stub namespace="[object Object]"></namespacememberlist-stub>
          <v-divider-stub></v-divider-stub>
          <v-divider-stub></v-divider-stub>
        </div>
        <!---->
        <div data-test="deleteOperation-div" class="mt-6">
          <h3 class="mb-5">
            Danger Zone
          </h3>
          <v-row-stub tag="div" class="mt-4 mb-2">
            <v-col-stub tag="div" class="ml-3">
              <h4>
                Delete this namespace
              </h4>
              <div class="ml-2">
                <p>
                  After deleting a namespace, there is no going back. Be sure.
                </p>
              </div>
            </v-col-stub>
            <v-col-stub md="auto" tag="div" class="ml-auto mb-4">
              <namespacedelete-stub nstenant="xxxxxxxx" data-test="namespaceDelete-component"></namespacedelete-stub>
            </v-col-stub>
          </v-row-stub>
        </div>
      </v-col-stub>
    </v-row-stub>
  </v-container-stub>
</fragment-stub>
`;
